# CEASIOMpy

./: .codacy.yml  .codecov.yml  .directory  .flake8  .gitignore  .readthedocs.yml  .travis.yml  .vsptime  CEASIOMpyInstallation  CEASIOMpy_docker_Installation  CEASIOMpy_docker_Installation_arm64  CEASIOMpy_docker_Installation_ubuntu  CONTRIBUTING.md  D150_simple (Copy).xml  LICENSE  MANIFEST.in  README.md  README.rst  StaticStability.md  _config.yml  ceasiompy.cfg  ceasiompy.db  ceasiompy_docker  ceasiompy_docker_Installation  ceasiompy_docker_installation  codecov.yml  contributing.md  dockerFile  doxconf  environment.yml  history.csv  license  license.md  pyproject.toml  readme.md  run_ci.sh  run_pytest.sh  setup.py  testceasiompy.db  tox.ini
CEASIOMpy/: environment.yml  setup.py
WKDIR/: labARstraight_toolInput.xml
ceasiompy/: .flake8  __init__.py  __version__.py  run_ceasiompy.py
doc/: CEASIOMpy_toolspecific_Schema.xml  Makefile  TODO.md  gen_documentation.sh  requirements.txt
docker/: Dockerfile.prod
documents/: TODO.md  architecture.md  index.md
install_scripts/: INSTALLATION.md  README.md
installation/: DOCKER_INSTALLATION.md  INSTALLATION.md  LINUX_INSTALLATION.md  MAC_OS_INSTALLATION.md  WINDOWS_INSTALLATION.md  dockerinstall.md
lib/: __version__.py
newsletter/: Welcome_to_CEASIOMpy_comunity.md  community.md
scripts/: build_rag_index.py  ceasiompy.ps1  ceasiompy.sh  install.ps1  install.sh  ollama.sh
streamlit/: CEASIOMpy.py  CEASIOMpy_GUI.py
test_cases/: .gitignore  TESTCASES.md
tests/: .gitignore  Test_input.xml  Test_input2.xml  (+6 more)
(+5241 files in other folders)
