[tool.black]
line-length = 99
extend-exclude = '''
/(
  | build/
  | dist/
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov"

[tool.coverage.run]
branch = false
source = ["ceasiompy"]

[tool.coverage.report]
exclude_lines = [
  'def __repr__',
  'def __str__',
  'if __name__ == "__main__":',
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["setuptools<60.0", "wheel"]
build-backend = "setuptools.build_meta"
